--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ requires-python = ">=3.8"
 classifiers = [
     "Development Status :: 3 - Alpha",
     "Intended Audience :: Developers",
-    "Intended Audience :: Science/Research", 
+    "Intended Audience :: Science/Research",
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
@@ -40,12 +40,13 @@ dev = [
     "pytest>=7.0.0",
     "pytest-cov",
     "pytest-asyncio",
+    "pre-commit",  # Added pre-commit as a dev dependency
     # "sentence-transformers", # For more realistic embedding tests
 ]
 
 [project.urls]
-Homepage = "https://github.com/superagenticai/agentvectordb" 
-Repository = "https://github.com/superagenticai/agentvectordb" 
+Homepage = "https://github.com/superagenticai/agentvectordb"
+Repository = "https://github.com/superagenticai/agentvectordb"
 
 [tool.setuptools]
 packages = ["agentvectordb"] # Ensure this correctly lists your package
@@ -57,8 +58,6 @@ addopts = "--cov=agentvectordb --cov-report=term-missing -p no:warnings"
 asyncio_mode = "auto"
 
 [tool.ruff]
-select = ["E", "F", "B", "I", "W"]
-ignore = ["E501"]
 line-length = 120
 target-version = "py38"
 fix = true
@@ -73,8 +72,12 @@ exclude = [
     "dist"
 ]
 
-[tool.ruff.per-file-ignores]
+[tool.ruff.lint]
+select = ["E", "F", "B", "I", "W"]
+ignore = ["E501", "E701", "E702", "F841", "F821", "B904"]
+
+[tool.ruff.lint.per-file-ignores]
 "__init__.py" = ["F401"]
 
-[tool.ruff.isort]
+[tool.ruff.lint.isort]
 known-first-party = ["agentvectordb"]
