--- a/docs/package.json
+++ b/docs/package.json
@@ -1,17 +1,21 @@
 {
   "name": "agentvectordb-docs",
   "version": "1.0.0",
-  "description": "Documentation for AgentVectorDB",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start"
   },
+  "type": "module",
   "dependencies": {
-    "next": "^13.0.0",
-    "nextra": "^2.0.0",
-    "nextra-theme-docs": "^2.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "next": "13.4.19",
+    "nextra": "2.7.0",
+    "nextra-theme-docs": "2.7.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
+  },
+  "devDependencies": {
+    "@types/node": "18.16.3",
+    "typescript": "4.9.5"
   }
 }
