--- a/docs/package.json
+++ b/docs/package.json
@@ -6,13 +6,14 @@
     "build": "next build",
     "start": "next start"
   },
-  "type": "module",
   "dependencies": {
     "next": "13.4.19",
-    "nextra": "2.7.0",
-    "nextra-theme-docs": "2.7.0",
+    "nextra": "2.2.20",
+    "nextra-theme-docs": "2.2.20",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "prism-react-renderer": "1.3.5",
+    "prismjs": "1.29.0"
   },
   "devDependencies": {
     "@types/node": "18.16.3",
