--- a/docs/package.json
+++ b/docs/package.json
@@ -5,7 +5,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "export": "next build && next export && touch ./out/.nojekyll"
+    "export": "next build && next export -o out && touch ./out/.nojekyll"
   },
   "dependencies": {
     "next": "13.4.19",
