--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ name = "agentvectordb"
 version = "0.0.3"
 authors = [
     { name = "Shashi Jagtap", email = "shashi@super-agentic.ai" },
+    { name = "Shashikant Jagtap", email = "shashikant.jagtap@icloud.com" }
 ]
 description = "AgentVectorDB (AVDB): The Cognitive Core for Your AI Agents. A lightweight, embeddable vector database for Agentic AI systems, built on LanceDB."
 readme = "README.md"
